# hzdr-gameplay-tweaks

./: .gitignore  CLAUDE.md  download-build.sh  install-mod.sh  vcpkg.json
.github/workflows/: build.yml
resources/: mod_config.ini
source/: CMakeLists.txt  ModConfiguration.cpp  ModConfiguration.h  PCH.h
source/HRZR/Core/: ConcentrationSensitivity.cpp
source/HRZR/PCore/: Array.h  Mutex.h
